Add TenderDocument API with presigned URL upload/download (TOS-31)
Implement four REST endpoints for tender document management: POST
presigned upload URL, GET document list with cursor pagination, DELETE
document (soft-delete + S3 cleanup), and GET presigned download URL.
Includes file validation (type, size, extension matching), S3 presigned
URL generation, DocumentNotReadyException with 409 handler, and
@ConfigurationProperties for file constraints. All 49 tests pass
(16 controller, 6 repository, 18 service, 9 validator).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>